fix code smells (#2120)